Add gradle build tasks